--- a/index.html
+++ b/index.html
@@ -1,65 +1,79 @@
-<html>
-	<head>
-		<title>Boxes</title>
-		<style type="text/css">
-			body {
-				font-size: 80%;
-				font-family: "Courier New", Courier, monospace;
-				letter-spacing: 0.15em;	
-				background-color: #efefef;}
-			#page {
-				max-width: 940px;
-				min-width: 720px;
-				margin: 10px auto 10px auto;
-				padding: 20px;
-				border: 4px double #000;
-				background-color: #ffffff;}
-			#logo {
-				width: 150px;
-				margin: 10px auto 25px auto;}
-			ul {
-				width: 570px;
-				padding: 15px;
-				margin: 0px auto 0px auto;
-				border-top: 2px solid #000;
-				border-bottom: 1px solid #000;
-				text-align: center;}
-			li {
-				display: inline;
-				margin: 0px 3px;}
-			p {
-				text-align: center;
-				width: 600px; 
-				margin: 20px auto 20px auto; 
-				font-weight: normal;}
-			a {
-				color: #000000;
-				text-transform: uppercase;
-				text-decoration: none;
-				padding: 6px 18px 5px 18px;}
-			a:hover, a.on {
-				color: #cc3333;
-				background-color: #ffffff;}
-		</style>
-	</head>
-	<body>
-		<div id="page">
-			<div id="logo">
-				<img src="images/logo.gif" alt="The Analog Specialists" />
-			</div>
-			<ul id="navigation">
-				<li><a href="#" class="on">Home</a></li>
-				<li><a href="#">For Sale</a></li>
-				<li><a href="#">Repairs</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Contact</a></li>
-			</ul>
-			<p>
-				<img src="images/keys.jpg" alt="Fender Rhodes, Hohner Clavinet, and Wurlitzer EP200" />
-			</p>
-			<p>
-				We specialize in the sale and repair of classic keyboards, in particular the Fender Rhodes, Wurlitzer EP200, and Hohner Clavinet.
-			</p>
-		</div>
-	</body>
+<!DOCTYPE html>
+
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta charset="utf-8" />
+    <title>힐링캠프</title>
+    <style type="text/css">
+        body {
+            color: #665544;
+            font-size: 80%;
+            font-family: "Courier New", Courier, Courier;
+            letter-spacing: 0.3em;
+            background-color: #efefef;
+        }
+
+        #page {
+            max-width: 1200px;
+            min-width: 600px;
+            margin: 20px auto 20px auto;
+            padding: 100px;
+            border: 5px double #5B4F43;
+            background-color: #e7e3d8;
+        }
+
+        ul {
+            width: 600px;
+            padding: 15px;
+            margin: 0px auto 0px auto;
+            border-top: 1.5px solid #5B4F43;
+            border-bottom: 1.5px solid #5B4F43;
+            text-align: center;
+        }
+
+        li {
+            display: inline;
+            margin: 0px 3px;
+        }
+
+        p {
+            text-align: center;
+            width: 600px;
+            margin: 20px auto 20px auto;
+            font-weight: normal;
+        }
+
+        a {
+            color: #665544;
+            text-transform: capitalize;
+            text-decoration: none;
+            padding: 6px 17px 5px 17px;
+        }
+
+            a:hover, a.on {
+                color: #cc3333;
+                background-color: #d4d0c6;
+            }
+    </style>
+</head>
+<body>
+    <div id="page">
+        <h1><b><center>힐링캠프</center></b></h1>
+        <ul id="navigation">
+            <li><a href="#">Home</a></li>
+            <li><a href="file:///C:/Users/%EC%9D%B4%EC%9C%A0%EB%A0%A8/Desktop/html5/HTMLPage2.html">movie</a></li>
+            <li><a href="file:///C:/Users/%EC%9D%B4%EC%9C%A0%EB%A0%A8/Desktop/html5/HTMLPage3.html">tv programs</a></li>
+            <li><a href="file:///C:/Users/%EC%9D%B4%EC%9C%A0%EB%A0%A8/Desktop/html5/HTMLPage6.html">music</a></li>
+        </ul>
+        <p>
+            <iframe width="600" height="340" src="https://www.youtube.com/embed/qSMMckgVML4?&amp;autoplay=1&amp;loop=1  frameborder="0" allow="autoplay; encrypted-media " ></iframe>
+        </p>
+        <p>
+            <center>
+                바쁜 일상에 지친 현대인들에게 힐링캠프가 힐링을 선사합니다!! <br> 힐링캠프는 힐링을 주제로한 영화와 음악, tv프로그램을 소개하는 사이트입니다.<br> 힐링캠프를 통해 소확행을 느끼시길 바랍니다!!
+            </center>
+            
+        </p>
+    </div>
+</body>
 </html>
