--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         <h1><b><center>힐링캠프</center></b></h1>
         <ul id="navigation">
             <li><a href="#">Home</a></li>
-            <li><a href="file:///C:/Users/%EC%9D%B4%EC%9C%A0%EB%A0%A8/Desktop/html5/HTMLPage2.html">movie</a></li>
-            <li><a href="file:///C:/Users/%EC%9D%B4%EC%9C%A0%EB%A0%A8/Desktop/html5/HTMLPage3.html">tv programs</a></li>
-            <li><a href="file:///C:/Users/%EC%9D%B4%EC%9C%A0%EB%A0%A8/Desktop/html5/HTMLPage6.html">music</a></li>
+            <li><a href="https://leeyuryeon.github.io/html-movie/">movie</a></li>
+            <li><a href="https://leeyuryeon.github.io/html-tv/">tv programs</a></li>
+            <li><a href="https://leeyuryeon.github.io/html-music/">music</a></li>
         </ul>
         <p>
             <iframe width="600" height="340" src="https://www.youtube.com/embed/qSMMckgVML4?&amp;autoplay=1&amp;loop=1  frameborder="0" allow="autoplay; encrypted-media " ></iframe>
